# GameOfLife

./: .gitignore  CMakeLists.txt  GameOfLife.sln  LICENSE  README.md
GameOfLife/: CMakeLists.txt  GameOfLife.vcxproj
GameOfLife/src/: Base.h  CMakeLists.txt  cpu_main.cpp  gpu_main.cu  kernel.cu  main.cpp  main_constants.h
GameOfLife/src/GameOfLife/: Base.h  CPUEngine.h  CPUImplentation.h  ClassicView.h  Controller.cpp  Controller.h  GPUImplementation.cuh  HeapArray.h  Macros.h
